--- v0.3 development series ---
- Added support for viewing messages as HTML (now enabled by default). Many
rounds of improvement. This should be perfectly usable now modulo bug 540911.
- Added folding support for HTML emails, added some heuristics to detect more
types of quotes than Thunderbird does by default (Hotmail-style,
Outlook-style...)
- Many improvements to the way HTML messages are displayed: JS, displaying
images now follow the global content policy, inline images are properly
displayed, HTML is sanitized, and many more...
- Fixes a bug where a thread would be incorrectly summarized as more than one
conversation. This is actually a bug in Thunderbird, see bug 538750.
- Added a small button that allows you to toggle between monospaced and regular
font for viewing plain/text messages. Useful for Bugzilla emails for instance.
- Fixed a bug that would render tab characters incorrectly in plain/text
messages with fixed-width fonts.
- "Mark all read" now also marks your own messages as read. The menuitem was
sometimes incorrectly grayed out. This is now fixed.
- Improve the look of printed messages (more improvements).

GMail Conversation View 0.3alpha1
---------------------------------
- Added a small paperclip icon next to messages that have "real" attachments (a
"false" attachment is an attachment you can display in the conversation view
such as texts, forwarded emails, old emails, etc.)
- Added a context-menu to the multi message view, that allows you to *print*
conversations. There's an associated "print style". Other various actions are
available through the context menu.
- Added extra buttons (+ preferences) when viewing a conversation : unfold all,
fold all, mark all read, open in new tab. There buttons only appear if viewing a
conversation, not a summary of messages scattered accross different threads.
- Added an option that allows you to focus the first unread message when viewing