@@ -1,9 +1,10 @@
 # vim:ft=none 
 # let nextbug = 58 in
 
-#57 Regression: scroll to the first unread message sometimes does not work.
-#30 Add "reply - reply to all - ..." and other links at the bottom of the
-  message, see http://www.flickr.com/photos/davidascher/3095078638/
+#54 Automatically switch to the conversation view when there's more than one
+message. Just add an event listener on messagepane for the "load" event, launch
+a request and refactor a little to add an extra parameter that switches to
+multimessage if we ask for it.
 #9 Add an option to mark a thread as read when it is displayed
   b) Improve it by only marking a message as read when it is scrolled into view
 #44 Add an option to reverse the order of messages (beware, this can break
@@ -12,10 +13,6 @@ things such as auto scrolling...)
 #51 Find a way to hide short quotes in HTML (i.e. less than 3 lines)
 #29 Encoding issues (Chinese not ok, Czech not ok either)
 
-#54 Automatically switch to the conversation view when there's more than one
-message. Just add an event listener on messagepane for the "load" event, launch
-a request and refactor a little to add an extra parameter that switches to
-multimessage if we ask for it.
 #50 Refactor message display (esp. plain/text) --> use a Necko URL (and use the
  HTML show/hide quoted text code)
 #47 0x0019 unicode char makes the innerHTML insertion phase fail
