@@ -3,3 +3,5 @@ showquotedtext=show quoted text
 reply=reply
 reply_all=reply to all
 forward=forward
+edit_new=edit as new
+reply_list=reply to list
